# electrotest

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_GUIDE.md  README.md  TEST_GUIDE.md  rust-toolchain.toml
.agents/skills/electrotest-pilot/: SKILL.md
.agents/skills/electrotest-release/: SKILL.md
.claude/skills/electrotest-release/: SKILL.md
.config/: nextest.toml
.github/workflows/: ci.yml  create-release-pr.yml  release.yml  test.yml
.zed/: settings.json
docs/superpowers/plans/: 2026-03-21-electrotest-v1-implementation.md  2026-03-21-release-workflow-implementation.md
docs/superpowers/specs/: 2026-03-21-electrotest-design.md  2026-03-21-release-workflow-design.md
examples/electron-app/: electrotest.toml  index.html  main.js  package.json
examples/features/: individual-step-tests.feature  step-validation.feature  test.feature
runtime/worker/: .oxfmtrc.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
runtime/worker/scripts/: build.mjs
src/: electron.rs  lib.rs  main.rs
src/cdp/: client.rs  messages.rs  mod.rs
src/cli/: args.rs  context.rs  feature.rs  launcher.rs  mod.rs  parser.rs  runner.rs
src/cli/steps/: mod.rs  (+3 more)
src/cmd/: init.rs  mod.rs  run.rs
src/config/: mod.rs  types.rs  validate.rs
src/electron/: mod.rs
src/engine/: mod.rs  playwright.rs  process.rs  protocol.rs
src/gherkin/: compile.rs  load.rs  mod.rs  model.rs
src/project/: bootstrap.rs  templates.rs
src/prompt/: command.rs  mod.rs
src/runner/: artifacts.rs  context.rs  errors.rs  execute.rs  mod.rs
src/steps/: builtin.rs  mod.rs  registry.rs  selector.rs
tests/: cli_doctor.rs  cli_init.rs  config_loading.rs  e2e_fixture.rs  gherkin_compile.rs  runner_errors.rs  worker_protocol.rs
tests/support/: mod.rs
(+30 files in other folders)
