[package]
name = "electrotest"
version = "0.2.1"
edition = "2024"

[dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
gherkin = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
thiserror = "1"
serde_json = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
