[package]
name = "electrotest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
sysinfo = "0.38.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
async-trait = "0.1"

# CDP / WebSocket dependencies
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "time", "fs"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
url = "2.5"
futures-util = "0.3"
