[package]
name = "electrotest"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
sysinfo = "0.38.4"

# CLI
clap = { version = "4.6", features = ["derive"] }
regex = "1.12"
async-trait = "0.1.89"

# CDP / WebSocket dependencies
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "time", "fs", "macros"] }
tokio-tungstenite = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22.1"
url = "2.5.8"
futures-util = "0.3.32"
